[gd_scene load_steps=8 format=3 uid="uid://x08i4ykf1q26"]

[ext_resource type="Texture2D" uid="uid://dfqh50glnbm" path="res://assets/rect.png" id="1_02ppr"]
[ext_resource type="Script" uid="uid://bx1f1xdbq77di" path="res://scenes/table.gd" id="1_eotx8"]
[ext_resource type="AudioStream" uid="uid://c8vfergsvbsw0" path="res://music/Delivered.mp3" id="2_x8522"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eotx8"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_eotx8"]
resource_name = "served"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.26666668, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(3.7, 6.8), Vector2(3.5, 9), Vector2(3.7, 6.8)]
}

[sub_resource type="Animation" id="Animation_x8522"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3.7, 6.8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_olh0b"]
_data = {
&"RESET": SubResource("Animation_x8522"),
&"served": SubResource("Animation_eotx8")
}

[node name="table" type="StaticBody2D"]
scale = Vector2(3.7, 6.8)
script = ExtResource("1_eotx8")
sound = ExtResource("2_x8522")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.18039216)
texture = ExtResource("1_02ppr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_eotx8")

[node name="area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
scale = Vector2(1.2, 1.14)
shape = SubResource("RectangleShape2D_eotx8")

[node name="seats" type="Node2D" parent="."]

[node name="seat1" type="Node2D" parent="seats"]
visible = false
position = Vector2(-13.783783, -6.4705877)
metadata/_edit_group_ = true
metadata/flip = true

[node name="Sprite2D" type="Sprite2D" parent="seats/seat1"]
scale = Vector2(0.4, 0.222)
texture = ExtResource("1_02ppr")

[node name="seat2" type="Node2D" parent="seats"]
visible = false
position = Vector2(-14.054054, 2.9411764)
metadata/_edit_group_ = true
metadata/flip = true

[node name="Sprite2D" type="Sprite2D" parent="seats/seat2"]
scale = Vector2(0.4, 0.222)
texture = ExtResource("1_02ppr")

[node name="seat3" type="Node2D" parent="seats"]
visible = false
position = Vector2(14.054053, -6.4705877)
metadata/_edit_group_ = true
metadata/flip = false

[node name="Sprite2D" type="Sprite2D" parent="seats/seat3"]
scale = Vector2(0.4, 0.222)
texture = ExtResource("1_02ppr")

[node name="seat4" type="Node2D" parent="seats"]
visible = false
position = Vector2(14.054054, 3.2352943)
metadata/_edit_group_ = true
metadata/flip = false

[node name="Sprite2D" type="Sprite2D" parent="seats/seat4"]
scale = Vector2(0.4, 0.222)
texture = ExtResource("1_02ppr")

[node name="table_number" type="Label" parent="."]
offset_left = -7.0
offset_top = -7.250003
offset_right = 33.0
offset_bottom = 33.58333
scale = Vector2(0.7, 0.35)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "5"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_olh0b")
}
speed_scale = 3.0

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
